--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,9 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --color-tint-100: rgb(231, 231, 230);
+  --color-tint-200: rgb(242, 242, 241);
+  --color-tint-300: rgb(250, 250, 249);
 }
 
 :root {
